# dependency-license-collector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  coverage.xml  cspell.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  deploy.yaml
scripts/: get_pypi_top100.py
src/dep_license_collector/: cli.py  models.py
src/dep_license_collector/package_registries/: pypi.py
src/dep_license_collector/source_repositories/: github.py
src/dlc/: cli.py  exceptions.py  known_license.jsonl  settings.py
src/dlc/models/: common.py  github.py  pypi.py  version.py
src/dlc/registries/: __init__.py  pypi.py
src/dlc/reports/: __init__.py  _license_files.py  html.py  html_report.py  jsonlines.py  license_files.py  report_params.py
src/dlc/repositories/: __init__.py  github.py
src/dlc/templates/: index.html  report.html
src/license_lister/: cli.py  models.py  settings.py
src/license_lister/package_registries/: pypi.py
src/license_lister/source_repositories/: github.py
tests/: conftest.py  test_pypi.py
